migrate to Angular 19

--- a/libs/src/lib/ui/product-list-signal/product-list-signal.component.html
+++ b/libs/src/lib/ui/product-list-signal/product-list-signal.component.html
@@ -20,10 +20,10 @@
       Share
     </button>
 
-    <app-product-alerts
+    <lib-product-alerts
       [product]="product"
       (notify)="onNotify()">
-    </app-product-alerts>
+    </lib-product-alerts>
 
   </div>
 }
