--- a/libs/src/lib/ui/product-list/product-list.component.html
+++ b/libs/src/lib/ui/product-list/product-list.component.html
@@ -18,9 +18,9 @@
     Share
   </button>
 
-  <app-product-alerts
+  <lib-product-alerts
     [product]="product"
     (notify)="onNotify()">
-  </app-product-alerts>
+  </lib-product-alerts>
 
 </div>
