--- a/libs/src/lib/ui/top-bar/top-bar.component.html
+++ b/libs/src/lib/ui/top-bar/top-bar.component.html
@@ -3,5 +3,5 @@
 </a>
 
 <a routerLink="/cart" class="button fancy-button">
-  <em class="material-icons">shopping_cart</em>Checkout
+  <i class="material-icons">shopping_cart</i>Checkout
 </a>
