--- a/libs/src/lib/ui/shipping-signal/shipping-signal.component.html
+++ b/libs/src/lib/ui/shipping-signal/shipping-signal.component.html
@@ -1,7 +1,7 @@
 <h3>Shipping Prices</h3>
 
 @if (shippingCosts()?.length) {
-  @for (shipping of shippingCosts(); track shipping.type) {
+  @for (shipping of shippingCosts(); track $index) {
     <div class="shipping-item">
       <span>{{ shipping.type }}</span>
       <span>{{ shipping.price | currency }}</span>
